// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollIndicators renders snapshot 1`] = `
<DocumentFragment>
  <div
    class="street-scroll-indicators"
    style="top: 0px;"
  >
    <button
      class="street-scroll-indicator-left"
    >
      ‹
    </button>
    <button
      class="street-scroll-indicator-right"
    >
      ›››
    </button>
  </div>
</DocumentFragment>
`;

exports[`ScrollIndicators renders snapshot for zero indicators 1`] = `
<DocumentFragment>
  <div
    class="street-scroll-indicators"
    style="top: 0px;"
  />
</DocumentFragment>
`;
